--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,14 +5,9 @@
 .container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 2fr 1fr;
-  height: 1500px;
+  grid-template-rows: 0.75fr 2fr 0.5fr;
   margin-left: 30px;
   margin-right: 30px;
-}
-
-#different {
-  background-color: yellowgreen;
 }
 
 #color {
@@ -342,7 +337,7 @@ a.class6:hover {
   height: 15px;
   border-radius: 50%;
   color: #0065FC;
-  margin-right: 10px;
+  margin-right: 7px;
 }
 
 #details {
@@ -353,7 +348,122 @@ a.class6:hover {
 
 #holiday {
   width: 400px;
+  margin-bottom: 10px;
 }
+
+.containerFive {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 530px;
+  margin-right: 120px;
+  margin-top: px;
+}
+
+.containerFiveA {
+  background-color: #F2F2F2;
+  width: 740px;
+  border-radius: 10px;
+}
+
+#estate {
+  margin-left: 35px;
+  margin-top: 25px;
+}
+
+.containerFiveA1 {
+  display: grid;
+  grid-template: repeat(2, 190px) / repeat(3, 1fr);
+  margin-left: 28px;
+  margin-right: 28px;
+  grid-gap: 15px;
+  line-height: 0.4em;
+}
+
+.containerFiveA2 {
+  margin-left: 15px;
+}
+
+#estate {
+  font-size: 18px;
+}
+
+.item4 {
+  border-radius: 15px;
+  background-color: white;
+}
+
+.view {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.fa-star {
+  color: #0065FC;
+}
+
+.star {
+  color: #F2F2F2;
+}
+
+.stay {
+  font-size: 14px;
+  margin-left: 15px;
+}
+
+.night {
+  font-size: 12px;
+  margin-left: 15px;
+}
+
+
+#indication {
+  margin-left: 35px;
+  font-size: 17px;
+}
+
+.containerFiveB {
+  background-color: #F2F2F2;
+  width: 380px;
+  border-radius: 10px;
+}
+
+.containerFiveB1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.containerFiveB2 {
+  display: grid;
+  grid-template: repeat(3, 135px) / repeat(1, 315px);
+  grid-gap: 15px;
+  margin-left: 28px;
+  margin-right: 28px;
+}
+
+.item5 {
+  border-radius: 15px;
+}
+
+#boxA {
+  background-color: yellow;
+}
+
+#boxB {
+  background-color: tomato;
+}
+
+#boxC {
+  background-color: yellowgreen;
+}
+
+
 
 
 
